footer section is added

--- a/src/sharedComponent/projectsCard/projectsCard.css
+++ b/src/sharedComponent/projectsCard/projectsCard.css
@@ -1,6 +1,6 @@
  .imgContainer {
      overflow: hidden;
-     height: 400px;
+     height: 300px;
  }
 
  .imgContainer img {
@@ -15,10 +15,15 @@
 
  .custom-btn{
     padding: 10px 30px;
-    border: 1px solid red;
+    border: 1px solid white;
     height: 50px;
  }
 
+ .custom-btn:hover{
+    background: yellow;
+    color: black;
+ }
+
  .card-container{
-    box-shadow: 0 0 15px yellow;
+    box-shadow: 0 0 15px black;
  }
