--- a/src/component/homepageComponents/skillCard/skillCard.css
+++ b/src/component/homepageComponents/skillCard/skillCard.css
@@ -1,9 +1,8 @@
 .skill-card {
-    background-color: white;
     transition: transform .5s;
+    overflow: hidden;
 }
 
 .skill-card:hover {
-    background-color: yellow;
-    transform: scale(1.1);
+    transform: scale(1.3);
 }
