loading icons additon -- done

--- a/src/sharedComponent/projectsCard/projectsCard.css
+++ b/src/sharedComponent/projectsCard/projectsCard.css
@@ -20,7 +20,8 @@
  }
 
  .custom-btn:hover{
-    background: yellow;
+    background: var(--primaryColor);
+    cursor: pointer;
     color: black;
  }
 
