projects additon --done

--- a/src/component/logo/logo.css
+++ b/src/component/logo/logo.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
-*{
+#logoFont{
     font-family: var(--logoFont);
 }
+
+/* this google font doesn't work */
